# typerutils

./: .envrc  .gitignore  Makefile  README.md  default.nix  flake.nix  lock.dev.darwin.json  lock.dev.linux.json  lock.prod.darwin.json  pyproject.toml  requirements.test.txt  requirements.txt
.github/workflows/: ci.yaml
scripts/: common.sh
scripts/test/: run
src/typerutils/: __init__.py  create_app.py  groups.py  log_level.py  test_groups.py  testing.py
src/typerutils/test_create_app/: test_add_completion.py  test_command_order.py  test_help.py
